# proj-automation

./: .editorconfig  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .ruff.toml  BOT_IMPLEMENTATION_SUMMARY.md  Dockerfile  PROJECT_GUIDELINES.md  README.md  WORKFLOW_ADDITION_SUMMARY.md  demo_bot_features.py  demo_features.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  ruff_errors.txt  setup_bot.py  test_bot_setup.py  test_import.py  test_reliability.py
.github/: copilot-instructions.md
.github/workflows/: automation.yml  ci.yml  daily-standup.yml  process-ideasheets.yml  run_all_checks.yml  run_all_checks_aggregator.yml  run_all_checks_unix.yml  sonar.yml  standup-multi-channel.yml  typed.yml
.github/workflows/tools/: check_workflows_yaml.py
.sonarlint/: connectedMode.json
bot/: .env.template  .env.txt  circuit_breaker.py  config.py  conversation_memory.db  cooldowns.py  google_api_wrapper.py  health_monitor.py  ideas.py  logging_config.py  main.py  openai_wrapper.py  reliability_config.py  requirements.txt  resource_manager.py  retry_utils.py  settings.py  tasks.py  thread_pool.py  utils.py
bot/commands/: help.py
bot/features/: __init__.py  budget.py  marketing.py
docs/: BOT_ENHANCEMENTS.md  CONSTRAINTS_REMOVAL.md  PROCESSING_DOCUMENTATION.md  RELIABILITY_DOCUMENTATION.md  bot-integration.md  bot_features.md
docs/ideasheets/: My First Idea.md  README.md  discord-integration-test.md  project-automation-enhancement.md  sample_idea.md
scripts/: async_discord_webhook.py  check_native_deps.py  cli_test_commands.py  currency_formatter.py  install_ffmpeg.ps1  markdown_processor.py  md_to_pdf.py  process_ideasheets.sh  run_all_checks.ps1  run_all_checks.sh  run_smoke_tests.py  send_pdf_to_discord.py  setup_local_env.ps1  setup_local_env.sh
scripts/templates/: default.html
tests/: __init__.py  test_budget.py  test_console_safe.py  test_cooldown_decorator.py  test_marketing.py  test_send_pdf_fallback_and_5xx.py  test_send_pdf_integration.py  test_send_pdf_retries.py  test_send_pdf_s3.py  test_send_pdf_s3_presigned.py  test_smoke.py
utils/: file_processor.py
